[package]
name = "todo"
# The crate is not published, so the only version that is used is the one in buildpack.toml.
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.64"

[dependencies]
nom = "*"
fs-err = "2.9.0"
indoc = "2.0.0"
libcnb = "0.11.1"
libherokubuildpack = { version = "0.11.1", default-features = false, features = ["error", "log"] }
linked-hash-map = "0.5.6"
regex = "1.7.0"

[dev-dependencies]
libcnb-test = "0.11.1"
